gcc/testsuite/rust/rustc/ui/parser/issues/diagnostics-parenthesized-type-arguments-issue-120892-2_dg.rs
fn main() {
  foo::/* definitely not harmful comment */(123, "foo") -> (u32); // { dg-error "" "" { target *-*-* } }
// { dg-note "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }
}

